[package]
name = "ina219"
description = "INA219 current/power monitor driver"
edition = "2021"
version = "0.2.0"
keywords = ["ina219", "driver", "i2c", "current", "no_std"]
repository = "https://github.com/scttnlsn/ina219"
authors = ["Scott Nelson <scott@scottnelson.co>", "Tamme Dittrich <tamme@tweedegolf.com>"]
license = "MIT/Apache-2.0"

[features]
default = ["paranoid"]

# Use the standard library and impl std::error::Error on all error types
std = []

# Perform checks to see if the INA219 reacts as expected such as:
# - All measurements are in the configured ranges
# - We can read back the configuration we have written without any changes
#
# This does cause some overhead such as memorizing the last written configuration and performing more actions on the
# bus. So it can be disabled by setting `default-features = false`.
paranoid = []

[dependencies]
embedded-hal = "1.0.0"

[dev-dependencies]
linux-embedded-hal = "0.4.0-alpha.4"
embedded-hal-mock = { version = "0.10.0", default-features = false, features = ["eh1"] }
